ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /*
spec:
  rules:
  - http:
      paths:
      - path: /course-svc/getAllDevopsTools
        pathType: Prefix
        backend:
          service:
            name: spring-boot-hello
            port:
              number: 8080
      - path: /listallcustomers
        pathType: Prefix
        backend:
          service:
            name: spring-boot-hello2
            port:
              number: 33333
